# libnex

./: .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  appveyor.yml  config.sh  requirements.txt
applications/: CMakeLists.txt  nex2ecl  nex2ecl.cpp
lib/: CMakeLists.txt
lib/src/: nexus_plot.cpp  unit.cpp
lib/src/include/nex/private/: nexus_plot.hpp  unit.hpp  util.hpp
lib/tests/: load.cpp  nexus_nexus2ecl.cpp  nexus_plot_load.cpp  nexus_plot_spe1.cpp  nexus_unit.cpp  spe1.cpp  units.cpp
python/: CMakeLists.txt  setup.py.in
python/nex/: __init__.py  historical.py  nex.cpp  nex.py
python/nex/_nex2ecl/: __init__.py  nex2ecl.py
python/test/: hist.py  historical.py  load.py  nex2ecl.py  units.py
test-data/: historical.csv
